fix: InnerTitle  placeTitle not centered

--- a/src/InputTitle/styles/inputTitle.less
+++ b/src/InputTitle/styles/inputTitle.less
@@ -51,6 +51,10 @@
       flex-grow: 1;
       width: 0;
     }
+    .@{input-title-prefix}-title {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
   }
   &:not(&-open) &-hideable {opacity: 0;}
   &:hover + .@{input-prefix}-clear-wrapper {display: block;}
